# agentic-ai-industry-use-cases

./: .gitignore  ENTERPRISE_PLATFORM_SERVICES.md  LICENSE  Makefile  README.md  SECURITY_REMEDIATION_COMPLETE.md  SECURITY_REVIEW.md  pyproject.toml  setup.sh  task_state.json  test-kiro-review.md
.github/workflows/: kiro-code-review.yml
apps/finance-trading/agent/: Dockerfile  agent.py  app.py  memory_strategies.py  utils_trading.py
apps/finance-trading/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
apps/healthcare-medical/agent/: Dockerfile  agent.py  app.py  memory_strategies.py
apps/healthcare-medical/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
apps/insurance-claims/agent/: Dockerfile  agent.py  app.py  memory_strategies.py
apps/insurance-claims/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
common/: secure_base_agent.py
deployment/: secure-agentcore-config.yaml
ekyc/: README.md  requirements.txt  setup.py
ekyc/docs/: api-reference.md  architecture.md  integration-guide.md
ekyc/src/: __init__.py
ekyc/src/api/: app.py  (+3 more)
ekyc/tests/: __init__.py
finance/trading-assistant/: README.md
infra/cdk/: app.py  shared_stack.py
insurance/claims-processing/: AWS_WELL_ARCHITECTED_SECURITY_REVIEW.md  Dockerfile  README.md  SECURITY_IMPLEMENTATION_GUIDE.md  docker-compose.yml  requirements.txt
retail/: FINAL_SECURITY_REPORT.md  FRAUD_DETECTION.md  requirements_secure.txt
retail/inventory-management/: README.md
retail/src/: fraud_detection.py  main_final_secure.py
(+125 files in other folders)
